--- a/style.css
+++ b/style.css
@@ -12,3 +12,19 @@
 input, .login-button {
     align-self: flex-start;
 }
+
+.error {
+    width: 100%;
+    padding: 0;
+  
+    font-size: 80%;
+    color: white;
+    background-color: #900;
+    border-radius: 0 0 5px 5px;
+  
+    box-sizing: border-box;
+  }
+  
+  .error.active {
+    padding: 0.3em;
+  }
