--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 .login-form-item {
     display: flex;
     flex-direction: column;
+    width: 170px;
 }
 
 input, .login-button {
@@ -15,13 +16,11 @@ input, .login-button {
 
 .error {
     width: 100%;
-    padding: 0;
-  
+    padding: 0;  
     font-size: 80%;
     color: white;
     background-color: #900;
-    border-radius: 0 0 5px 5px;
-  
+    border-radius: 0 0 5px 5px;  
     box-sizing: border-box;
   }
   
