added conditional statement in invalid login span to display an error message when login fails

--- a/style.css
+++ b/style.css
@@ -27,3 +27,13 @@ input, .login-button {
   .error.active {
     padding: 0.3em;
   }
+
+  .login-main {
+    display: flex;
+    justify-content: flex-start;
+    margin-top: 100px;
+    align-items: center;
+    flex-direction: column;
+    height: 100vh - 100px;
+
+  }
