--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
+body {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 .login-form {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    align-items: center;
 }
 
 .login-form-item {
