--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     -moz-osx-font-smoothing: grayscale;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-.login-form {
+.login-form , .forgot-password-form {
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -16,7 +16,7 @@ body {
     width: 170px;
 }
 
-input, .login-button {
+input, .login-button, .forgot-password-form-button {
     align-self: flex-start;
 }
 
@@ -47,4 +47,8 @@ input, .login-button {
     outline: none;
     border: none;
     background-color: white;
+  }
+
+  .forgot-password-form {
+    padding-top: 10px;
   }
