--- a/lecturer-portal.css
+++ b/lecturer-portal.css
@@ -13,7 +13,8 @@ body {
   }
   
   nav {
-    background-color: #eee;
+    background-color: #333;
+    color: #fff;
     border-bottom: 1px solid #ddd;
     padding: 10px;
   }
@@ -31,7 +32,7 @@ body {
   }
   
   nav a {
-    color: #0072c6;
+    color: #fff;
     text-decoration: none;
   }
   
