added similar textInputs to an array, and added eventListeners to each node via a forEach loop

--- a/style.css
+++ b/style.css
@@ -36,13 +36,13 @@ tr:hover {
   flex-direction: column;
   gap: 10px;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
 }
 
 .registration-form-item {
   display: flex;
   gap: 5px;
-  justify-content: space-between;
+  /* justify-content: space-between; */
 }
 
 .registration-form-btn {
@@ -61,13 +61,13 @@ tr:hover {
   
   padding: 0;  
   font-size: 80%;
-  color: white;
-  background-color: #900;
+  color: #900;
+  /* background-color: #900; */
   border-radius: 0 0 5px 5px;  
   box-sizing: border-box;
 }
 
 .error.active {
   padding: 0.3em;
-  width: 100%;
+  width: fit-content;
 }
