--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ tr:hover {
   
   padding: 0;  
   font-size: 80%;
-  color: #900;
+  /* color: #900; */
   /* background-color: #900; */
   border-radius: 0 0 5px 5px;  
   box-sizing: border-box;
