added code to render students details into the students table in admin-portal

--- a/admin-portal/admin-portal.css
+++ b/admin-portal/admin-portal.css
@@ -35,3 +35,10 @@ body {
     text-decoration: underline;
   }
   
+  table,td,tr,th {
+    border: 2px solid black;
+    border-collapse: collapse;
+  }
+  td,th {
+    padding: 2px;
+  }
