Added footer selector for styling

--- a/lecturer-portal/lecturer-portal.css
+++ b/lecturer-portal/lecturer-portal.css
@@ -99,4 +99,10 @@ body {
   button[type="submit"]:hover {
     background-color: #005499;
   }
+footer {
+  background-color: #0072c6;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+}
   
