Added several styling attributes to the header section

--- a/student-portal/student-portal.css
+++ b/student-portal/student-portal.css
@@ -7,15 +7,23 @@ body {
 header {
 	background-color: #0072c6;
 	color: #fff;
-	padding: 20px;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
+	text-align: center;
+	padding: 10px;
+}
+
+nav {
+	background-color: #333;
+	color: #fff;
+	border-bottom: 1px solid #ddd;
+	padding: 10px;
 }
 
 nav ul {
+	margin: 0;
+	padding: 0;
 	list-style: none;
 	display: flex;
+	justify-content: center;
 }
 
 nav li {
@@ -25,7 +33,10 @@ nav li {
 nav a {
 	color: #fff;
 	text-decoration: none;
-	text-align: center;
+}
+
+nav a:hover {
+	text-decoration: underline;
 }
 
 main {
