added form to attendance section and conditional rendering of its submit button

--- a/student-portal/student-portal.css
+++ b/student-portal/student-portal.css
@@ -45,7 +45,7 @@ main {
 	padding: 0 20px;
 }
 
-#personal-info, #units {
+#personal-info, #units, #student-attendance {
 	margin-bottom: 50px;
 }
 
