added section wot display students who attended and those that didn't

--- a/lecturer-portal/lecturer-portal.css
+++ b/lecturer-portal/lecturer-portal.css
@@ -105,4 +105,12 @@ footer {
   padding: 20px;
   text-align: center;
 }
+
+.attendance-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  gap: 50px;
+}
   
