--- a/lecturer-portal/lecturer-portal.css
+++ b/lecturer-portal/lecturer-portal.css
@@ -105,7 +105,12 @@ footer {
   padding: 20px;
   text-align: center;
 }
-
+.attendance-section{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 .attendance-container{
   display: flex;
   justify-content: center;
