--- a/lecturer-portal/lecturer-portal.css
+++ b/lecturer-portal/lecturer-portal.css
@@ -78,7 +78,7 @@ body {
     margin-bottom: 5px;
   }
   
-  input[type="text"],
+  input[type="text"], input[type="email"], input[type="password"], input[type="tel"],
   select {
     padding: 5px;
     border: 1px solid #ccc;
